--- a/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application-security.properties
+++ b/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application-security.properties
@@ -1,5 +1,5 @@
 
-spring.boot.admin.auth.enabled=true
+spring.boot.auth.enabled=true
 
 spring.boot.admin.username=${security.user.name}
 spring.boot.admin.password=${security.user.password}
