--- a/sourcecode/breeze/cloud/cloud-admin-server/pom.xml
+++ b/sourcecode/breeze/cloud/cloud-admin-server/pom.xml
@@ -38,6 +38,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-hystrix</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>de.codecentric</groupId>
 			<artifactId>spring-boot-admin-server</artifactId>
 		</dependency>
