增加cas的dashboard支持

--- a/sourcecode/breeze/cloud/cloud-config/src/main/resources/config-repo/application.yml
+++ b/sourcecode/breeze/cloud/cloud-config/src/main/resources/config-repo/application.yml
@@ -8,3 +8,18 @@ eureka:
       enabled: true
     serviceUrl:
       defaultZone: http://registry.earth.com:12000/registry
+      
+      
+endpoints:
+  auditevents:
+    enabled: true
+  mappings: 
+    enabled: true
+  metrics:
+    enabled: true
+  trace:
+    enabled: true
+  heapdump:
+    enabled: true
+  env: 
+    enabled: true
