--- a/sourcecode/breeze/storm/storm-cas/src/main/resources/bootstrap.properties
+++ b/sourcecode/breeze/storm/storm-cas/src/main/resources/bootstrap.properties
@@ -17,6 +17,8 @@ spring.cloud.config.enabled=true
 spring.profiles.active=dev,dev-jdbc
 #指定配置中心地址
 spring.cloud.config.uri=http://registry.earth.com:11000
+spring.cloud.config.username=mgmt
+spring.cloud.config.password=mgmt-security
 
 #支持自动任务去配置中心刷新配置
 spring.cloud.config.watch.enabled=true
