--- a/sourcecode/breeze/storm/storm-cas/src/main/resources/bootstrap.properties
+++ b/sourcecode/breeze/storm/storm-cas/src/main/resources/bootstrap.properties
@@ -21,7 +21,7 @@ spring.cloud.config.username=mgmt
 spring.cloud.config.password=mgmt-security
 
 #支持自动任务去配置中心刷新配置
-spring.cloud.config.watch.enabled=true
+spring.cloud.config.watch.enabled=false
 #30秒刷新一次
 spring.cloud.config.watch.initialDelay=30000
 #请求配置中心超时
