增加注册中心安全认证

--- a/sourcecode/breeze/cloud/cloud-admin-server-eureka/src/main/resources/application-eureka.properties
+++ b/sourcecode/breeze/cloud/cloud-admin-server-eureka/src/main/resources/application-eureka.properties
@@ -5,5 +5,5 @@ eureka.instance.metadataMap.user.name=${security.user.name}
 eureka.instance.metadataMap.user.password=${security.user.password}
 
 eureka.client.registryFetchIntervalSeconds=5
-eureka.client.serviceUrl.defaultZone=http://registry.earth.com:12000/registry
+eureka.client.serviceUrl.defaultZone=http://mgmt:mgmt-security@registry.earth.com:12000/registry
 
