--- a/sourcecode/breeze/cloud/cloud-config/src/main/resources/bootstrap.yml
+++ b/sourcecode/breeze/cloud/cloud-config/src/main/resources/bootstrap.yml
@@ -77,7 +77,10 @@ eureka:
     metadataMap:
       user.name: ${security.user.name}
       user.password: ${security.user.password}
-      
+  client:
+    serviceUrl:
+      defaultZone: http://${security.user.name}:${security.user.password}@registry.earth.com:12000/registry/    
+  
 security:
   user:
     name: mgmt
