--- a/sourcecode/breeze/cloud/cloud-registry-client/pom.xml
+++ b/sourcecode/breeze/cloud/cloud-registry-client/pom.xml
@@ -18,10 +18,15 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.3.13.RELEASE</spring.version>
-        <spring-security.version>4.2.3.RELEASE</spring-security.version>
+		<spring-security.version>4.2.3.RELEASE</spring-security.version>
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>net.oschina.git.justlive1.breeze.snow</groupId>
+			<artifactId>snow-common-base</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
