--- a/sourcecode/breeze/storm/storm-cas/src/main/webapp/WEB-INF/web.xml
+++ b/sourcecode/breeze/storm/storm-cas/src/main/webapp/WEB-INF/web.xml
@@ -3,5 +3,9 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+	<display-name>Archetype Created Web Application</display-name>
+
+	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
 </web-app>
