--- a/sourcecode/breeze/rain/rain-service/src/main/webapp/WEB-INF/web.xml
+++ b/sourcecode/breeze/rain/rain-service/src/main/webapp/WEB-INF/web.xml
@@ -55,4 +55,7 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
+	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
 </web-app>
