--- a/sourcecode/breeze/storm/storm-cas-management/src/main/webapp/WEB-INF/web.xml
+++ b/sourcecode/breeze/storm/storm-cas-management/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,8 @@
 
 <web-app>
 	<display-name>Archetype Created Web Application</display-name>
+
+	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
 </web-app>
