--- a/sourcecode/breeze/storm/storm-cas-client-shiro/pom.xml
+++ b/sourcecode/breeze/storm/storm-cas-client-shiro/pom.xml
@@ -17,6 +17,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<shiro.version>1.2.6</shiro.version>
 	</properties>
 	<dependencies>
 
