--- a/sourcecode/breeze/cloud/cloud-config/pom.xml
+++ b/sourcecode/breeze/cloud/cloud-config/pom.xml
@@ -18,6 +18,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.3.13.RELEASE</spring.version>
 		<spring-security.version>4.2.3.RELEASE</spring-security.version>
+		<registry-client>-eureka</registry-client>
 	</properties>
 
 	<dependencies>
@@ -26,15 +27,15 @@
 			<groupId>net.oschina.git.justlive1.breeze.cloud</groupId>
 			<artifactId>cloud-security-support</artifactId>
 		</dependency>
+		
+		<dependency>
+            <groupId>net.oschina.git.justlive1.breeze.cloud</groupId>
+            <artifactId>cloud-registry-client${registry-client}</artifactId>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-eureka-server</artifactId>
 		</dependency>
 
 		<dependency>
