--- a/sourcecode/breeze/storm/storm-cas/pom.xml
+++ b/sourcecode/breeze/storm/storm-cas/pom.xml
@@ -19,6 +19,9 @@
 		<!-- app.server could be -jetty, -undertow, -tomcat, or blank if you plan 
 			to provide appserver -->
 		<app.server>-tomcat</app.server>
+		<registry-client>-eureka</registry-client>
+		<cloud.version>0.0.1-SNAPSHOT</cloud.version>
+		
 		<spring.version>4.3.12.RELEASE</spring.version>
 		<spring-security.version>4.2.3.RELEASE</spring-security.version>
 
@@ -61,6 +64,12 @@
 			<groupId>net.oschina.git.justlive1.breeze.snow</groupId>
 			<artifactId>snow-common-base</artifactId>
 		</dependency>
+		
+		<!-- <dependency>
+            <groupId>net.oschina.git.justlive1.breeze.cloud</groupId>
+            <artifactId>cloud-registry-client${registry-client}</artifactId>
+            <version>${cloud.version}</version>
+        </dependency> -->
 
 		<dependency>
 			<groupId>org.apereo.cas</groupId>
@@ -89,6 +98,7 @@
 			<version>${cas.version}</version>
 			<scope>runtime</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.apereo.cas</groupId>
 			<artifactId>cas-server-support-rest-services</artifactId>
@@ -96,15 +106,11 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- Swagger API -->
-		<!-- <dependency> <groupId>org.apereo.cas</groupId> <artifactId>cas-server-documentation-swagger</artifactId> 
-			<version>${cas.version}</version> </dependency> -->
-
-		<dependency>
+        <dependency>
 			<groupId>org.apereo.cas</groupId>
 			<artifactId>cas-server-support-eureka-client</artifactId>
 			<version>${cas.version}</version>
-		</dependency>
+		</dependency> 
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
