--- a/sourcecode/breeze/cloud/cloud-config/pom.xml
+++ b/sourcecode/breeze/cloud/cloud-config/pom.xml
@@ -18,7 +18,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.3.13.RELEASE</spring.version>
 		<spring-security.version>4.2.3.RELEASE</spring-security.version>
-		<registry-client>-eureka</registry-client>
+		<registry-client>-consul</registry-client>
 	</properties>
 
 	<dependencies>
