--- a/sourcecode/breeze/cloud/cloud-registry-client-consul/pom.xml
+++ b/sourcecode/breeze/cloud/cloud-registry-client-consul/pom.xml
@@ -18,8 +18,12 @@
 	</properties>
 
 	<dependencies>
-	
-	
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-consul-discovery</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
