修复security-support静态资源覆盖eureka资源问题

--- a/sourcecode/breeze/cloud/cloud-config/src/main/resources/bootstrap.yml
+++ b/sourcecode/breeze/cloud/cloud-config/src/main/resources/bootstrap.yml
@@ -9,7 +9,7 @@ spring:
   application:
     name: cloud-config
   profiles:
-    active: native,consul,security
+    active: native,eureka,security
   
   cloud:
     config:
