--- a/sourcecode/breeze/cloud/cloud-admin-server-eureka/src/main/resources/application.properties
+++ b/sourcecode/breeze/cloud/cloud-admin-server-eureka/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=13000
 
 spring.application.name=admin-server
-spring.profiles.active=common,eureka
+spring.profiles.active=common,eureka,security
 
-management.security.enabled=false
+#management.security.enabled=false
 
 logging.level.=info
 logging.file=admin.log
