--- a/sourcecode/breeze/storm/storm-cas/src/main/resources/bootstrap.properties
+++ b/sourcecode/breeze/storm/storm-cas/src/main/resources/bootstrap.properties
@@ -16,7 +16,7 @@ spring.cloud.config.enabled=true
 #寻找配置中心为sso-dev.properties
 spring.profiles.active=dev,dev-jdbc
 #指定配置中心地址
-spring.cloud.config.uri=http://registry.earth.com:11000
+spring.cloud.config.uri=http://registry.earth.com:11000/configs
 spring.cloud.config.username=mgmt
 spring.cloud.config.password=mgmt-security
 
