--- a/sourcecode/breeze/cloud/cloud-config/src/main/resources/bootstrap.yml
+++ b/sourcecode/breeze/cloud/cloud-config/src/main/resources/bootstrap.yml
@@ -56,10 +56,13 @@ spring:
     consul:
       host: registry.earth.com
       port: 8500
+      discovery:
+        tags: user.name=${security.user.name},user.password=${security.user.password}
     discovery:
       healthCheckPath: ${management.contextPath}/health
       healthCheckInterval: 15s
       instanceId: ${spring.application.name}:${vcap.application.instanceId:${spring.application.instanceId:${random.value}}}
+      
 
 ---    
 spring:
