--- a/sourcecode/breeze/cloud/cloud-config/src/main/resources/config-repo/application.yml
+++ b/sourcecode/breeze/cloud/cloud-config/src/main/resources/config-repo/application.yml
@@ -9,6 +9,16 @@ eureka:
     serviceUrl:
       defaultZone: http://mgmt:mgmt-security@registry.earth.com:12000/registry
       
+spring:
+  cloud:
+    consul:
+      host: registry.earth.com
+      port: 8500
+      discovery:
+        tags: user.name=${security.user.name},user.password=${security.user.password}
+    discovery:
+      instanceId: ${spring.application.name}:${vcap.application.instanceId:${spring.application.instanceId:${random.value}}}
+      
       
 endpoints:
   auditevents:
