--- a/sourcecode/breeze/cloud/cloud-config/src/main/resources/bootstrap.yml
+++ b/sourcecode/breeze/cloud/cloud-config/src/main/resources/bootstrap.yml
@@ -9,7 +9,7 @@ spring:
   application:
     name: cloud-config
   profiles:
-    active: native,eureka,security
+    active: native,registry-cloud,security
   
   cloud:
     config:
@@ -48,33 +48,6 @@ encrypt:
     alias: config.earth.com
     secret: justlive1
 
----
-spring:
-  profiles: consul
-  
-  cloud:
-    consul:
-      host: registry.earth.com
-      port: 8500
-      discovery:
-        tags: user.name=${security.user.name},user.password=${security.user.password}
-    discovery:
-      healthCheckPath: ${management.contextPath}/health
-      healthCheckInterval: 15s
-      instanceId: ${spring.application.name}:${vcap.application.instanceId:${spring.application.instanceId:${random.value}}}
-      
-
----    
-spring:
-  profiles: eureka
-  
-eureka:
-  instance:
-    preferIpAddress: true
-    instanceId: ${spring.cloud.client.ipAddress}:${server.port}
-  client:
-    serviceUrl:
-      defaultZone: http://registry.earth.com:12000/registry/
       
 ---
 spring:
@@ -92,15 +65,6 @@ spring:
     auth: 
       enabled: true
 
-eureka:
-  instance:
-    metadataMap:
-      user.name: ${security.user.name}
-      user.password: ${security.user.password}
-  client:
-    serviceUrl:
-      defaultZone: http://${security.user.name}:${security.user.password}@registry.earth.com:12000/registry/    
-  
 security:
   user:
     name: mgmt
