--- a/sourcecode/breeze/cloud/cloud-registry-client-zookeeper/src/main/resources/application-registry-cloud.yml
+++ b/sourcecode/breeze/cloud/cloud-registry-client-zookeeper/src/main/resources/application-registry-cloud.yml
@@ -2,3 +2,7 @@ spring:
   cloud:
     zookeeper:
       connect-string: localhost:2181
+      discovery:
+        metadata:
+          user.name: ${security.user.name:}
+          user.password: ${security.user.password:}
