--- a/sourcecode/breeze/lightning/pom.xml
+++ b/sourcecode/breeze/lightning/pom.xml
@@ -15,7 +15,7 @@
 		<relativePath />
 	</parent>
 
-	<name>cloud</name>
+	<name>lighting</name>
 	<url>https://gitee.com/justlive1/earth</url>
 
 	<properties>
@@ -33,6 +33,7 @@
 		<spring-session.version>1.3.1.RELEASE</spring-session.version>
 		<spring-cloud.version>Edgware.RELEASE</spring-cloud.version>
 		<spring-boot-admin.version>1.5.7</spring-boot-admin.version>
+		<zip4j.version>1.3.2</zip4j.version>
 
 		<aspectj.version>1.8.9</aspectj.version>
 		<assertj.version>2.6.0</assertj.version>
@@ -177,6 +178,12 @@
 				<version>${spring-session.version}</version>
 			</dependency>
 
+			<dependency>
+				<groupId>net.lingala.zip4j</groupId>
+				<artifactId>zip4j</artifactId>
+				<version>${zip4j.version}</version>
+			</dependency>
+			
 			<!-- lombok -->
 			<dependency>
 				<groupId>org.projectlombok</groupId>
@@ -187,4 +194,7 @@
 		</dependencies>
 	</dependencyManagement>
 
+	<modules>
+		<module>lighting-chained</module>
+	</modules>
 </project>
