--- a/sourcecode/breeze/lightning/lighting-chained/pom.xml
+++ b/sourcecode/breeze/lightning/lighting-chained/pom.xml
@@ -20,6 +20,11 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>net.oschina.git.justlive1.breeze.snow</groupId>
+			<artifactId>snow-common-base</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
