修改配置文件

--- a/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application-common.properties
+++ b/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application-common.properties
@@ -21,7 +21,7 @@ spring.boot.admin.notify.mail.to=qq11419041@163.com
 spring.boot.admin.notify.mail.subject=#{application.name} (#{application.id}) is #{to.status}
 spring.boot.admin.notify.mail.text=#{application.name} (#{application.id})\nstatus changed from #{from.status} to #{to.status}\n\n#{application.healthUrl}
 
-spring.boot.admin.routes.endpoints: env,metrics,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,activiti,hystrix.stream
+spring.boot.admin.routes.endpoints=env,metrics,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,activiti,hystrix.stream
 
 
 info.version=@project.version@
