--- a/sourcecode/breeze/snow/snow-common-web-vertx/pom.xml
+++ b/sourcecode/breeze/snow/snow-common-web-vertx/pom.xml
@@ -21,13 +21,23 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>net.oschina.git.justlive1.breeze.snow</groupId>
+			<artifactId>snow-common-base</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-core</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
 		</dependency>
 
 		<dependency>
