--- a/sourcecode/breeze/snow/snow-common-web-vertx/pom.xml
+++ b/sourcecode/breeze/snow/snow-common-web-vertx/pom.xml
@@ -36,9 +36,15 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.vertx</groupId>
+			<artifactId>vertx-unit</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.reflections</groupId>
 			<artifactId>reflections</artifactId>
 		</dependency>
+
 
 		<dependency>
 			<groupId>junit</groupId>
