--- a/sourcecode/breeze/lightning/pom.xml
+++ b/sourcecode/breeze/lightning/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>net.oschina.git.justlive1.breeze.lighting</groupId>
+	<groupId>justlive1.earth.breeze.lighting</groupId>
 	<artifactId>lighting</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
@@ -111,7 +111,7 @@
 
 			<!-- self -->
 			<dependency>
-				<groupId>net.oschina.git.justlive1.breeze.snow</groupId>
+				<groupId>justlive1.earth.breeze.snow</groupId>
 				<artifactId>snow-common-base</artifactId>
 				<version>${snow.version}</version>
 			</dependency>
