--- a/sourcecode/breeze/rain/rain-api/pom.xml
+++ b/sourcecode/breeze/rain/rain-api/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>net.oschina.git.justlive1.breeze.rain</groupId>
+		<groupId>justlive1.earth.breeze.rain</groupId>
 		<artifactId>rain</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
